[package]
name = "cheat_menu_re3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cheat_menu_re3"

[dependencies]
hudhook = { version = "0.3.0"}
simplelog = "0.12.0"
imgui = "0.8.2"
log = "0.4.17"
pdb = "0.8.0"
open = "3.2.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
toy-arms = {version = "0.9.4", features = ["internal", "external"]}
windows = {version = "0.43.0", features = ["Win32_System_Memory", "Win32_Foundation"]}